2004-08-16  Bharat Mediratta  <bharat@menalto.com>  1.4.5-cvs-b110

        * Added a tool for finding and removing comment spam from your 
          gallery.  You can import and maintain your own blacklist.
          It's very inefficient, but it works.

2004-08-15  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b109

	* Change: Corrected Userfile check again - checking is_writeable()
	  by itself wasn't sufficient.

2004-08-15  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b108

	* Fix: The 'Userfile not writeable' error completely broke new installs where
	  the userfile doesn't exist yet.

2004-08-15  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b107

	* Fix: Remove Debug Code.

2004-08-15  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b106

	* Change: Use timestamp for itemCaptureDate. This required a album version bump.

	* New: Possibility to use capture date as caption.

2004-08-13  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b105

	Change: Initial commit of a little Block for Caption Options during upload.

	Fix: strftime uses different format then date (for captions)

2004-08-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b104

	* Change:  Porting a missed fix forward - 
	  phpBB2/modules.php needs to extract variables even when register_globals
	  is enabled.

2004-08-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b103

	* Change: Support the new-style phpnuke embedding (no 'modload' passed)

	* Change: Correct the sample phpnuke random block

2004-08-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b102

	* Add: block-Random_Image.php.sample for phpnuke

	* Change: Added gpl.txt to phpBB2/modules.php

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b101

        * Fix: Print fatal error message instead of obscure PHP error
          when userDB fails to init before we try and use it.

	* Change: Print the correct graphics package path in check_imagemagick.php
