@@ -1,3 +1,12 @@
+2004-08-16  Bharat Mediratta  <bharat@menalto.com>  1.4.5-cvs-b111
+
+	* Modified block-random.php to put the part that retrieves a 
+	  photo into a function so that sites can easily modify it to
+	  generate 2 random photos (like we do on gallery.menalto.com)
+
+	* Fixed tools/despam-comments.php to work properly inside 
+	  Postnuke (and hopefully all other CMSen)
+
 2004-08-16  Bharat Mediratta  <bharat@menalto.com>  1.4.5-cvs-b110
 
         * Added a tool for finding and removing comment spam from your 
